fix: better edited stats tooltip readability

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6666,6 +6666,7 @@ table.astralForgeShards td {
     font-size: 13px;
     font-variant: small-caps;
     font-family: RobotoSlab;
+    margin: 0 auto;
     margin-bottom: 0.5rem;
 }
 
